fix: Make easter image look good on mobile.

--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -12,11 +12,12 @@
 body
     .index-page
         &.hero
-            background: url('../assets/easter_2022.jpg') no-repeat center top fixed
+            background: url('../assets/easter_2022.jpg') no-repeat center top
             background-size: cover
 .index-page
     .hero-body
         // background: rgba(88, 202, 221, .5)
+        padding: 10rem 1.5rem
         h1
             padding: 1rem
             display: block
